[gd_scene load_steps=85 format=3 uid="uid://bdlmf4ux4n4pm"]

[ext_resource type="Script" path="res://Game/Scenes/tank_m/spells_tank_m.gd" id="1_gc2tw"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/spells_tank_m_1.gd" id="1_v41x7"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/ctrlr_tank_m_1.gd" id="2_0dq0n"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/ctrlr_aa_tank.gd" id="2_ggjgq"]
[ext_resource type="Texture2D" uid="uid://bnmyx8si41vxd" path="res://Game/Ressources/Heros/tank_m/spell_1.png" id="2_gt2pn"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/spells_tank_m_2.gd" id="3_svxqv"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/aa_tank.gd" id="3_txguk"]
[ext_resource type="Texture2D" uid="uid://ccbq5vx1qpwo1" path="res://Game/Ressources/Heros/tank_m/aa.png" id="4_c1xar"]
[ext_resource type="Texture2D" uid="uid://bi3byo27c1pbq" path="res://Game/Ressources/Heros/tank_m/spell_3.png" id="4_kmjpx"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/ctrlr_tank_m_2.gd" id="5_44gva"]
[ext_resource type="Texture2D" uid="uid://ci0ek1vyncvtv" path="res://Game/Ressources/Heros/tank_m/spell_2.png" id="6_x8u38"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/spells_tank_m_4.gd" id="7_dpcfe"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/spells_explode_tank_m_3.gd" id="7_pbsbc"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/ctrlr_tank_m_3.gd" id="8_brars"]
[ext_resource type="Texture2D" uid="uid://1tww4s807xl0" path="res://Game/Ressources/Heros/tank_m/spell_4.png" id="8_ext40"]
[ext_resource type="Texture2D" uid="uid://daxq5id4kocqb" path="res://Game/Ressources/Heros/tank_m/contact.png" id="8_vpfal"]
[ext_resource type="Texture2D" uid="uid://cp6rmn0h1qs76" path="res://Game/Ressources/Heros/tank_m/charge_ult.png" id="9_hjlx8"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/rock_tank_m_3.gd" id="9_ku8ki"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/spell4_charge.gd" id="9_t35db"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/ctrlr_tank_m_4.gd" id="11_7pbcp"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/special_tank_m.gd" id="13_t75lh"]
[ext_resource type="Texture2D" uid="uid://edcref8u2bdm" path="res://Game/Ressources/Heros/tank_m/special_shield.png" id="15_ei068"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/ctrlr_special_tank_m.gd" id="21_85vo5"]
[ext_resource type="Script" path="res://Game/Scenes/tank_m/push_tank_m.gd" id="24_1olmu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dxmdv"]
radius = 62.5
height = 575.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e2r3f"]
atlas = ExtResource("4_c1xar")
region = Rect2(0, 0, 792, 788)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfqnn"]
atlas = ExtResource("4_c1xar")
region = Rect2(792, 0, 792, 788)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4mhq"]
atlas = ExtResource("4_c1xar")
region = Rect2(1584, 0, 792, 788)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmiaa"]
atlas = ExtResource("4_c1xar")
region = Rect2(2376, 0, 792, 788)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag48f"]
atlas = ExtResource("4_c1xar")
region = Rect2(3168, 0, 792, 788)

[sub_resource type="AtlasTexture" id="AtlasTexture_60e2e"]
atlas = ExtResource("4_c1xar")
region = Rect2(0, 788, 792, 788)

[sub_resource type="AtlasTexture" id="AtlasTexture_seee3"]
atlas = ExtResource("4_c1xar")
region = Rect2(792, 788, 792, 788)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bhjr"]
atlas = ExtResource("4_c1xar")
region = Rect2(1584, 788, 792, 788)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlmq4"]
atlas = ExtResource("4_c1xar")
region = Rect2(2376, 788, 792, 788)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i7nh"]
atlas = ExtResource("4_c1xar")
region = Rect2(3168, 788, 792, 788)

[sub_resource type="SpriteFrames" id="SpriteFrames_sy5s0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2r3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfqnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4mhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmiaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag48f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60e2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seee3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bhjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlmq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i7nh")
}],
"loop": false,
"name": &"default",
"speed": 50.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_unsbh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txiln"]
size = Vector2(38, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fdfj"]
atlas = ExtResource("2_gt2pn")
region = Rect2(0, 0, 432, 1124)

[sub_resource type="SpriteFrames" id="SpriteFrames_8gqge"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fdfj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5pojr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fgk12"]
radius = 53.0094

[sub_resource type="AtlasTexture" id="AtlasTexture_rc0fi"]
atlas = ExtResource("4_kmjpx")
region = Rect2(0, 0, 1404, 1395)

[sub_resource type="AtlasTexture" id="AtlasTexture_10wdp"]
atlas = ExtResource("4_kmjpx")
region = Rect2(1404, 0, 1404, 1395)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjlum"]
atlas = ExtResource("4_kmjpx")
region = Rect2(2808, 0, 1404, 1395)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj3oo"]
atlas = ExtResource("4_kmjpx")
region = Rect2(4212, 0, 1404, 1395)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf20p"]
atlas = ExtResource("4_kmjpx")
region = Rect2(0, 1395, 1404, 1395)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtvtq"]
atlas = ExtResource("4_kmjpx")
region = Rect2(1404, 1395, 1404, 1395)

[sub_resource type="AtlasTexture" id="AtlasTexture_7su36"]
atlas = ExtResource("4_kmjpx")
region = Rect2(2808, 1395, 1404, 1395)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7hb7"]
atlas = ExtResource("4_kmjpx")
region = Rect2(4212, 1395, 1404, 1395)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqm0v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc0fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10wdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjlum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj3oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf20p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtvtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7su36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7hb7")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_g8hjf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sbanv"]
radius = 24.0832

[sub_resource type="AtlasTexture" id="AtlasTexture_jdktd"]
atlas = ExtResource("6_x8u38")
region = Rect2(0, 73, 490, 2070)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4vad"]
atlas = ExtResource("6_x8u38")
region = Rect2(490, 73, 490, 2070)

[sub_resource type="AtlasTexture" id="AtlasTexture_br12r"]
atlas = ExtResource("6_x8u38")
region = Rect2(980, 73, 490, 2070)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7xow"]
atlas = ExtResource("6_x8u38")
region = Rect2(1470, 73, 490, 2070)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvh0g"]
atlas = ExtResource("6_x8u38")
region = Rect2(1960, 73, 490, 2070)

[sub_resource type="AtlasTexture" id="AtlasTexture_arlkx"]
atlas = ExtResource("6_x8u38")
region = Rect2(2450, 73, 490, 2070)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0e7w"]
atlas = ExtResource("6_x8u38")
region = Rect2(2940, 73, 490, 2070)

[sub_resource type="SpriteFrames" id="SpriteFrames_gko83"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdktd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4vad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br12r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7xow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvh0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arlkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0e7w")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qvr37"]
radius = 67.0522

[sub_resource type="AtlasTexture" id="AtlasTexture_o20jo"]
atlas = ExtResource("8_vpfal")
region = Rect2(0, 0, 1358, 1348)

[sub_resource type="SpriteFrames" id="SpriteFrames_wo1nf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o20jo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_uc5ep"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lr8du"]
atlas = ExtResource("8_ext40")
region = Rect2(0, 0, 360, 1124)

[sub_resource type="SpriteFrames" id="SpriteFrames_vx1j7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr8du")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x168k"]
size = Vector2(45, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdp8b"]
atlas = ExtResource("9_hjlx8")
region = Rect2(0, 0, 2223, 690)

[sub_resource type="AtlasTexture" id="AtlasTexture_cobtv"]
atlas = ExtResource("9_hjlx8")
region = Rect2(0, 690, 2223, 690)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao8ft"]
atlas = ExtResource("9_hjlx8")
region = Rect2(0, 1380, 2223, 690)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8spe"]
atlas = ExtResource("9_hjlx8")
region = Rect2(0, 2070, 2223, 690)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqdho"]
atlas = ExtResource("9_hjlx8")
region = Rect2(0, 2760, 2223, 690)

[sub_resource type="AtlasTexture" id="AtlasTexture_5esr6"]
atlas = ExtResource("9_hjlx8")
region = Rect2(0, 3450, 2223, 690)

[sub_resource type="SpriteFrames" id="SpriteFrames_srt8a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdp8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cobtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao8ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8spe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqdho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5esr6")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prp72"]
size = Vector2(20, 87)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_bfhoh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_61uem"]
atlas = ExtResource("15_ei068")
region = Rect2(0, 0, 1240, 1323)

[sub_resource type="SpriteFrames" id="SpriteFrames_xjxe7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61uem")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_olsyu"]
radius = 565.685

[sub_resource type="AtlasTexture" id="AtlasTexture_wacot"]
atlas = ExtResource("8_ext40")
region = Rect2(0, 0, 360, 1124)

[sub_resource type="SpriteFrames" id="SpriteFrames_6yhgv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wacot")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njc7s"]
size = Vector2(22, 80)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_11awy"]

[node name="spells_tank_m_phldr" type="Node"]
script = ExtResource("1_gc2tw")

[node name="ctrlr_aa_tank_m" type="Node2D" parent="."]
script = ExtResource("2_ggjgq")

[node name="aa_tank_m" type="Area2D" parent="ctrlr_aa_tank_m"]
visible = false
scale = Vector2(0.08, 0.08)
script = ExtResource("3_txguk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_aa_tank_m/aa_tank_m"]
shape = SubResource("CapsuleShape2D_dxmdv")

[node name="aa_anim" type="AnimatedSprite2D" parent="ctrlr_aa_tank_m/aa_tank_m"]
sprite_frames = SubResource("SpriteFrames_sy5s0")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_aa_tank_m"]
replication_config = SubResource("SceneReplicationConfig_unsbh")

[node name="ctrlr_tank_m_1" type="Node2D" parent="."]
script = ExtResource("2_0dq0n")

[node name="spell_tank_m_1" type="Area2D" parent="ctrlr_tank_m_1"]
visible = false
script = ExtResource("1_v41x7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_tank_m_1/spell_tank_m_1"]
shape = SubResource("RectangleShape2D_txiln")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="anim_tank_m_1" type="AnimatedSprite2D" parent="ctrlr_tank_m_1/spell_tank_m_1"]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_8gqge")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_tank_m_1"]
replication_config = SubResource("SceneReplicationConfig_5pojr")

[node name="ctrlr_tank_m_2" type="Node2D" parent="."]
script = ExtResource("5_44gva")

[node name="spell_tank_m_2" type="Area2D" parent="ctrlr_tank_m_2"]
visible = false
script = ExtResource("3_svxqv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_tank_m_2/spell_tank_m_2"]
shape = SubResource("CircleShape2D_fgk12")

[node name="anim_tank_m_2" type="AnimatedSprite2D" parent="ctrlr_tank_m_2/spell_tank_m_2"]
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_qqm0v")
frame = 6
frame_progress = 0.699265

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_tank_m_2"]
replication_config = SubResource("SceneReplicationConfig_g8hjf")

[node name="ctrlr_tank_m_3" type="Node2D" parent="."]
script = ExtResource("8_brars")

[node name="spells_tank_m_3" type="Node2D" parent="ctrlr_tank_m_3"]

[node name="rock_tank_m_3" type="CharacterBody2D" parent="ctrlr_tank_m_3/spells_tank_m_3"]
visible = false
script = ExtResource("9_ku8ki")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_tank_m_3/spells_tank_m_3/rock_tank_m_3"]
shape = SubResource("CircleShape2D_sbanv")

[node name="anim_tank_m_3" type="AnimatedSprite2D" parent="ctrlr_tank_m_3/spells_tank_m_3/rock_tank_m_3"]
position = Vector2(-1, -3)
scale = Vector2(0.18, 0.18)
sprite_frames = SubResource("SpriteFrames_gko83")

[node name="explode_tank_m_3" type="Area2D" parent="ctrlr_tank_m_3/spells_tank_m_3"]
visible = false
script = ExtResource("7_pbsbc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_tank_m_3/spells_tank_m_3/explode_tank_m_3"]
shape = SubResource("CircleShape2D_qvr37")

[node name="anim_exp_tank_m_3" type="AnimatedSprite2D" parent="ctrlr_tank_m_3/spells_tank_m_3/explode_tank_m_3"]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_wo1nf")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_tank_m_3/spells_tank_m_3"]
replication_config = SubResource("SceneReplicationConfig_uc5ep")

[node name="ctrlr_tank_m_4" type="Node2D" parent="."]
script = ExtResource("11_7pbcp")

[node name="charge" type="Area2D" parent="ctrlr_tank_m_4"]
visible = false
script = ExtResource("7_dpcfe")

[node name="anim_charge" type="AnimatedSprite2D" parent="ctrlr_tank_m_4/charge"]
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_vx1j7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_tank_m_4/charge"]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_x168k")

[node name="zone" type="Area2D" parent="ctrlr_tank_m_4"]
visible = false
script = ExtResource("9_t35db")

[node name="anim_zone" type="AnimatedSprite2D" parent="ctrlr_tank_m_4/zone"]
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_srt8a")
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_tank_m_4/zone"]
position = Vector2(-150, 2)
shape = SubResource("RectangleShape2D_prp72")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_tank_m_4"]
replication_config = SubResource("SceneReplicationConfig_bfhoh")

[node name="ctrlr_special_tank_m" type="Node2D" parent="."]
script = ExtResource("21_85vo5")

[node name="counter_tank_m" type="Area2D" parent="ctrlr_special_tank_m"]
visible = false
scale = Vector2(0.05, 0.05)
script = ExtResource("13_t75lh")

[node name="anim_counter" type="AnimatedSprite2D" parent="ctrlr_special_tank_m/counter_tank_m"]
sprite_frames = SubResource("SpriteFrames_xjxe7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_special_tank_m/counter_tank_m"]
shape = SubResource("CircleShape2D_olsyu")

[node name="push_tank_m" type="Area2D" parent="ctrlr_special_tank_m"]
visible = false
script = ExtResource("24_1olmu")

[node name="anim_push" type="AnimatedSprite2D" parent="ctrlr_special_tank_m/push_tank_m"]
scale = Vector2(0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_6yhgv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_special_tank_m/push_tank_m"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_njc7s")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_special_tank_m"]
replication_config = SubResource("SceneReplicationConfig_11awy")
